--- a/main.ipynb
+++ b/main.ipynb
@@ -114,9 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(1295, 1364, 4)"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_val[0].shape"
+   ],
    "metadata": {
     "collapsed": false
    }
