--- a/main.ipynb
+++ b/main.ipynb
@@ -36,6 +36,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true,
@@ -89,10 +98,11 @@
     }
    ],
    "source": [
-    "from src.model import UNet\n",
+    "from src.model import UNet, EarlyStopper\n",
     "\n",
     "unet = UNet()\n",
-    "unet.train_model(train_loader, val_loader, num_epochs=1000, learning_rate=0.01, device=device)"
+    "es = EarlyStopper(patience=10)\n",
+    "unet.train_model(train_loader, val_loader, es, num_epochs=1000, learning_rate=0.01, device=device)"
    ],
    "metadata": {
     "id": "9O20sVobO0r9",
