--- a/main.ipynb
+++ b/main.ipynb
@@ -38,7 +38,10 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "!wget https://github.com/lacykaltgr/satellite-image-segmentation/archive/refs/heads/eye-in-the-sky.zip\n",
+    "!unzip eye-in-the-sky.zip"
+   ],
    "metadata": {
     "collapsed": false
    }
