--- a/main.ipynb
+++ b/main.ipynb
@@ -22,9 +22,9 @@
     "    drive.mount('/content/drive')\n",
     "    root = '/content/drive/MyDrive/colab/sat-images/'\n",
     "    device = 'cuda'\n",
-    "    !wget -O sat.zip https://github.com/lacykaltgr/satellite-image-segmentation/archive/refs/heads/eye-in-the-sky.zip\n",
+    "    !wget -O sat.zip https://github.com/lacykaltgr/satellite-image-segmentation/archive/refs/heads/eye-in-the-sky-2.zip\n",
     "    !unzip sat.zip\n",
-    "    !cp satellite-image-recognition-eye-in-the-sky/src .\n",
+    "    !cp -r satellite-image-segmentation-eye-in-the-sky-2/src .\n",
     "else:\n",
     "    root = '/Users/laszlofreund/code/ai/satellite-image-segmentation/data/'\n",
     "    device = 'mps'"
@@ -35,30 +35,6 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[8], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mtrain_dataset\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m\n",
-      "File \u001B[0;32m~/code/ai/satellite-image-segmentation/src/dataset.py:23\u001B[0m, in \u001B[0;36mXYDataset.__getitem__\u001B[0;34m(self, idx)\u001B[0m\n\u001B[1;32m     22\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__getitem__\u001B[39m(\u001B[38;5;28mself\u001B[39m, idx):\n\u001B[0;32m---> 23\u001B[0m     x \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mtranspose(torch\u001B[38;5;241m.\u001B[39mtensor(\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mx_data\u001B[49m\u001B[43m[\u001B[49m\u001B[43midx\u001B[49m\u001B[43m]\u001B[49m\u001B[38;5;241m.\u001B[39mastype(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124muint8\u001B[39m\u001B[38;5;124m'\u001B[39m))\u001B[38;5;241m.\u001B[39mfloat(), \u001B[38;5;241m0\u001B[39m, \u001B[38;5;241m2\u001B[39m)\n\u001B[1;32m     24\u001B[0m     y \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mtensor(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39my_data[idx]\u001B[38;5;241m.\u001B[39mastype(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124muint8\u001B[39m\u001B[38;5;124m'\u001B[39m))\u001B[38;5;241m.\u001B[39mfloat()\n\u001B[1;32m     25\u001B[0m     y_onehot \u001B[38;5;241m=\u001B[39m rgb_to_onehot(y, color_dict\u001B[38;5;241m=\u001B[39mcolor_dict)\n",
-      "\u001B[0;31mIndexError\u001B[0m: list index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "train_dataset[0]"
-   ],
-   "metadata": {
-    "collapsed": false
    }
   },
   {
@@ -80,7 +56,7 @@
     "val_dataset = XYDataset(x_val, y_val, crop_size=512)\n",
     "#test_dataset = XYDataset(x_test, torch.zeros(len(x_test)))\n",
     "\n",
-    "batch_size = 1\n",
+    "batch_size = 128\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size)\n",
     "#test_loader = DataLoader(test_dataset, batch_size=batch_size)"
